2008-02-25  Per Abrahamsen  <abraham@dina.kvl.dk>

	* chemical_std.C (ChemicalStandard::water_turnover_factor): Moved.
	* abiotic.C, abiotic.h (Abiotic::f_h): To here.
	* organic_std.C (OrganicStandard::water_turnover_factor): Use it.

2008-02-21  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.26 released.

2008-02-21  Per Abrahamsen  <abraham@dina.kvl.dk>

	* condition_crop.C (crop_dm_sorg_over): New condition.
	* field.C, field.h, column_std.C, column.h (crop_sorg_dm): New
	member function. 
	* vegevegetation_crops.C, vegetation_permanent.C:
	vegetation.h: (SOrg_DM_by_name): New virtual member function.
	* crop_simple.C, crop_old.C, crop_sold.C, crop_std.C:
	* crop.h (SOrg_DM): New virtual member function.
	
	* crop_std.C (CropStandard::DM): Take 'sorg_height' into account.
	
	* harvesting.C (Harvesting::operator ()): Only harvest as much
	dead leaves as you harvest live leaves.

	* vegetation.C, vegetation.h (Vegetation::all_crops): New symbol.
	* action_crop.C (Annual::doIt, Perennial::harvest): 
	* action_harvest.C (ActionEmerge::doIt, ActionHarvest::doIt)
	(ActionPluck::doIt, ActionPluckSyntax::ActionPluckSyntax)
	(ActionEmergeSyntax::ActionEmergeSyntax, struct ActionHarvest): 
	* action_markvand.C (ActionMarkvand::doIt): 
	* vegetation_crops.C (VegetationCrops::DM_by_name)
	(VegetationCrops::emerge, VegetationCrops::harvest)
	(VegetationCrops::pluck, VegetationCrops::cleanup_canopy): Use it.

2008-02-20  Per Abrahamsen  <abraham@dina.kvl.dk>

	* assertion.C: Make sure iostream is initialized.

	* action_harvest.C (cut, pluck): New actions.
	* field.C, field.h, column.h, column_std.C:
	* vegetation.h, vegetation_crops.C, vegetation_permanent.C:
	* crops.h, crops.C, crop_std.C (pluck): New member funciton.

	* harvesting.C, harvesting.h (Harvesting::operator ()): Take new
	sorg_harvest argument.
	* crops_std.C (harvest): Update calller.

2008-02-18  Per Abrahamsen  <abraham@dina.kvl.dk>

	* dlf.C (DLF::finish): Don't print 'Toplevel' description.
