@@ -1,10 +1,12 @@
 TODO --- things that needs to be done with Daisy -*- outline -*-
 
+* decompose stof i litter som jord
+
+Check med BGJ
+
 * (when hourly) skal ikke logge hvert minut
 
 og (when minutely) skal have en enhed "/M"
-
-* decompose stof i litter som jord
 
 * row width
 
